--- a/src/app/Components/Primary/my-work/my-work.component.html
+++ b/src/app/Components/Primary/my-work/my-work.component.html
@@ -4,29 +4,43 @@
 </div>
 
 <div id="container">
-  <app-project
-    [name]="'ChatIt'" [logo]="'url(\'/../../../assets/ChatItLogo.svg\')'"
-    [description]="'Website with global group room for chatting'"
-    [color]="'#2A2B2A'" [angular]="true" [firebase]="true" [typescript]="true"
-    [sass]="true" [codeLink]="'https://github.com/GakPower/ChatIt'"
-    [liveLink]="'https://chatit-1.firebaseapp.com/login'" [new]="true"
-    [appAnimate]="{name: 'fromTopFade', delay: 250}">
-  </app-project>
-  <app-project
-    [name]="'BHive'" [logo]="'url(\'/../../../assets/BHiveLogo.svg\')'"
-    [description]="'Website to monitor and control your BHive Arduino scales'"
-    [color]="'#FFAC1D'" [angular]="true" [firebase]="true" [typescript]="true"
-    [codeLink]="'https://github.com/GakPower/BHiveAngular'"
-    [liveLink]="'https://www.bhive.team'"
-    [appAnimate]="{name: 'fromTopFade', delay: 500}">
-  </app-project>
-  <app-project
-    [name]="'Hayabusa'" [logo]="'url(\'/../../../assets/hayabusaLogo.png\')'"
-    [description]="'Application to help truck drivers keep track of their trips'"
-    [color]="'#d62600'" [java]="true" [javaFX]="true" [SQL]="true"
-    [codeLink]="'https://github.com/GakPower/Hayabusa_Project_v2.3'"
-    [appAnimate]="{name: 'fromTopFade', delay: 750}">
-  </app-project>
+
+  <h1 [appAnimate]="{name: 'fromLeftFade', delay: 250}">My Projects</h1>
+  <div id="projectContainer">
+    <app-project
+      [name]="'ChatIt'" [logo]="'url(\'/../../../assets/ChatItLogo.svg\')'"
+      [description]="'Website with global group room for chatting'"
+      [color]="'#2A2B2A'" [angular]="true" [firebase]="true" [typescript]="true"
+      [sass]="true" [codeLink]="'https://github.com/GakPower/ChatIt'"
+      [liveLink]="'https://chatit-1.firebaseapp.com/login'" [new]="true"
+      [appAnimate]="{name: 'fromTopFade', delay: 750}">
+    </app-project>
+    <app-project
+      [name]="'BHive'" [logo]="'url(\'/../../../assets/BHiveLogo.svg\')'"
+      [description]="'Website to monitor and control your BHive Arduino scales'"
+      [color]="'#FFAC1D'" [angular]="true" [firebase]="true" [typescript]="true"
+      [codeLink]="'https://github.com/GakPower/BHiveAngular'"
+      [liveLink]="'https://www.bhive.team'"
+      [appAnimate]="{name: 'fromTopFade', delay: 1000}">
+    </app-project>
+    <app-project
+      [name]="'Hayabusa'" [logo]="'url(\'/../../../assets/hayabusaLogo.png\')'"
+      [description]="'Application to help truck drivers keep track of their trips'"
+      [color]="'#d62600'" [java]="true" [javaFX]="true" [SQL]="true"
+      [codeLink]="'https://github.com/GakPower/Hayabusa_Project_v2.3'"
+      [appAnimate]="{name: 'fromTopFade', delay: 1250}">
+    </app-project>
+  </div>
+  <h1 [appAnimate]="{name: 'fromLeftFade', delay: 1500}">Work Experience</h1>
+  <div id="workContainer">
+    <app-work
+      [name]="'Endometrix'" [logo]="'url(\'/../../../assets/EndometrixLogo.png\')'"
+      [description]="'Mobile app that through daily tracking, helps you recognize patterns within your health so you can demand the treatment you deserve'"
+      [color]="'#87E2E9'" [reactNative]="true" [redux]="true" [firebase]="true"
+      [liveLink]="'https://endo-metrix.com/'" [role]="'App Developer(Intern)'" [period]="'Jul 2020 - now'"
+      [appAnimate]="{name: 'fromTopFade', delay: 2000}">
+    </app-work>
+  </div>
 </div>
 
 <div>
