--- a/src/app/Components/Primary/skills/skills.component.html
+++ b/src/app/Components/Primary/skills/skills.component.html
@@ -7,17 +7,22 @@
     <h1 [appAnimate]="{name: 'fromLeftFade', delay: 250}">Skills</h1>
 
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 500}">
-      <span>Passionate</span> with programming in general and from the age of 12 I have
-      <span>self-taught</span> HTML5, CSS(Sass), Javascript (TypeScript), Java, Python, C and C++.
+      <span>Passionate</span> with programming from the age of 12 I have
+      <span>self-taught</span> languages like HTML5, CSS(Sass), Javascript (TypeScript), Java, Python, C, C++
+      and Libraries and Frameworks like <span>Angular</span>, <span>React Native</span> and JavaFX.
     </p>
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 750}">
-      Also, I have used some Libraries and <span>Frameworks</span> to make the result even better,
-      like, JavaFx, <span>Angular</span> and Firebase. In addition to that I have worked
-      with both SQL and NoSQL databases.
+      Also, a platform that I have used in most of my projects is <span>Firebase</span>.
+      In addition to that I have worked with both SQL and NoSQL databases.
     </p>
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1000}">
-      I have no previous work experience.
-      However, my passion has driven me on creating some interesting projects.
+      From my internship at Endometrix I have learned how a company operates from business decision making
+      and prioritization of tasks to designing a UI for a better user experience. Also, due to the small size
+      of the team I worked in all aspects of a <span>React Native</span> application. Some of the things I did
+      and learned are, working with state management libraries like <span>Redux/Redux-Toolkit</span>,
+      working with both <span>bare and managed workflows</span>, implementing recurring push notifications
+      and adding error reporting service with Sentry. Also, creating complex UI components that interact
+      the user can interact with was a big part of the internship.
     </p>
 
   </div>
