making codeLink invisible if no link is requested

--- a/src/app/Components/Secondary/project/project.component.scss
+++ b/src/app/Components/Secondary/project/project.component.scss
@@ -181,6 +181,10 @@
 }
 
 @media only screen and (max-width: 300px) {
+  :host {
+    max-width: 200px;
+    min-height: 300px;
+  }
   #container {
     #logo {
       width: 100px;
