--- a/src/app/Components/Secondary/project/project.component.css
+++ b/src/app/Components/Secondary/project/project.component.css
@@ -143,6 +143,11 @@
 }
 
 @media only screen and (max-width: 300px) {
+  :host {
+    max-width: 200px;
+    min-height: 300px;
+  }
+
   #container #logo {
     width: 100px;
     height: 100px;
