--- a/src/app/Components/Secondary/project/project.component.html
+++ b/src/app/Components/Secondary/project/project.component.html
@@ -21,7 +21,7 @@
   <div id="desc">
     <p>{{description}}</p>
     <div id="buttons">
-      <div (click)="openInNewTab(codeLink)">
+      <div *ngIf="codeLink" (click)="openInNewTab(codeLink)">
         <span>Code</span>
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
              width="32" height="32"
