quick content fix

--- a/src/app/Components/Primary/skills/skills.component.html
+++ b/src/app/Components/Primary/skills/skills.component.html
@@ -21,8 +21,8 @@
       of the team I worked in all aspects of a <span>React Native</span> application. Some of the things I did
       and learned are, working with state management libraries like <span>Redux/Redux-Toolkit</span>,
       working with both <span>bare and managed workflows</span>, implementing recurring push notifications
-      and adding error reporting service with Sentry. Also, creating complex UI components that interact
-      the user can interact with was a big part of the internship.
+      and adding error reporting service with Sentry. Also, creating complex UI components that the user
+      can interact with was a big part of the internship.
     </p>
 
   </div>
