About content updated

--- a/src/app/Components/Primary/about/about.component.html
+++ b/src/app/Components/Primary/about/about.component.html
@@ -19,7 +19,7 @@
     </p>
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1250}">
       Currently interested in a full-time job
-      as a <span>Front-End Web Developer or Java Developer</span>.
+      as a <span>Front-End Web Developer</span>.
     </p>
 
   </div>
