Content update and minor UI changes

--- a/src/app/Components/Primary/about/about.component.html
+++ b/src/app/Components/Primary/about/about.component.html
@@ -7,19 +7,13 @@
   <div id="content">
     <h1 [appAnimate]="{name: 'fromLeftFade', delay: 250}">About</h1>
 
-    <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 750}">
-      <span>Programming enthusiast, problem solver and perfectionist</span>,
-      now attending bachelor’s degree studies on Information and Communication
-      Technology at KTH Royal Institute of Technology in Stockholm.
-    </p>
-    <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1000}">
-      Worked on many <span id="projectsSpan" routerLink="/myWork">personal projects</span>
-      with curiosity for Computer Science as my driving
-      force.
-    </p>
-    <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1250}">
-      Currently interested in a full-time job
-      as a <span>Front-End Web Developer</span>.
+    <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 750}">My name is George Kotsiopoulos, I am from Greece, 20 years old and currently living in <span>Stockholm</span>.</p>
+    <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1000}">I used to play a lot of video games when I was younger. When I was finishing primary school, I remember I said myself “what should I become when I get older?”. Thankfully, I was not good enough at playing video games to become a professional player so my second option was programming.</p>
+    <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1250}">Since then I have been exploring the vast world of development. The last 2 years I dove into the fascinating field of <span>Web Development</span>.</p>
+    <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1500}">I would characterize myself as a <span>self-taught web developer</span>, <span>programming enthusiast</span>, <span>problem solver</span> and <span>perfectionist</span>.</p>
+    <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1750}">Amongst my interests are listening to music, playing chess with my friend and tennis.</p>
+    <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 2000}">
+      Currently looking for a full-time position where I can expand my skills.
     </p>
 
   </div>
