--- a/src/app/Components/Primary/about/about.component.scss
+++ b/src/app/Components/Primary/about/about.component.scss
@@ -54,6 +54,7 @@
     .desc {
       margin-top: 0;
       margin-bottom: 15px;
+      width: 100%;
       color: var(--textWhite);
       font-family: var(--secondaryFont);
 
