--- a/src/app/Components/Primary/home/home.component.html
+++ b/src/app/Components/Primary/home/home.component.html
@@ -10,7 +10,7 @@
       <span>a web developer</span>
     </h1>
 
-    <span id="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1000}">Programming enthusiast / web developer / student</span>
+    <span id="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1000}">Programming enthusiast / web developer</span>
 
     <button routerLink="/contact" [appAnimate]="{name: 'fromLeftFade', delay: 1500}">Contact me</button>
 
