Added support for the ChatIt project

--- a/src/app/Components/Secondary/project/project.component.html
+++ b/src/app/Components/Secondary/project/project.component.html
@@ -41,9 +41,19 @@
 
   <div id="tags">
     <div *ngIf="angular" style="background-color: #DC0530"><span>#angular</span></div>
-    <div *ngIf="firebase" style="background-color: #FFCB2B"><span>#firebase</span></div>
+
+    <div *ngIf="react" style="background-color: #49D1F9"><span>#react</span></div>
+
     <div *ngIf="typescript" style="background-color: #0076C6"><span>#typescript</span></div>
+    <div *ngIf="firebase" style="background-color: #FFCB2B"><span>#firebase</span></div>
+    <div *ngIf="redux" style="background-color: #764ABC"><span>#redux</span></div>
     <div *ngIf="css" style="background-color: #1B84C1"><span>#css3</span></div>
+
+    <div *ngIf="node" style="background-color: #008433; color: whitesmoke"><span>#node</span></div>
+    <div *ngIf="express" style="background-color: #535353; color: whitesmoke"><span>#express</span></div>
+    <div *ngIf="mongoDB" style="background-color: #15d264"><span>#mongoDB</span></div>
+    <div *ngIf="socketIO" style="background-color: #c4c4c4"><span>#socket.io</span></div>
+    <div *ngIf="jwt" style="background-color: #F70058"><span>#jwt</span></div>
 
     <div *ngIf="sass" style="background-color: #CD6799"><span>#sass</span></div>
 
