--- a/src/app/Components/Primary/skills/skills.component.html
+++ b/src/app/Components/Primary/skills/skills.component.html
@@ -8,22 +8,28 @@
 
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 500}">
       <span>Passionate</span> with programming from the age of 12 I have
-      <span>self-taught</span> languages like HTML5, CSS(Sass), Javascript (TypeScript), Java, Python, C, C++
-      and Libraries and Frameworks like <span>Angular</span>, <span>React Native</span> and JavaFX.
+      <span>self-taught</span> languages like TypeScript, Javascript, SASS, CSS3, HTML5, Java, Python, C, C++
+      and Libraries/Frameworks like <span>Angular</span>, <span>React</span> <span>React Native</span> and JavaFX.
     </p>
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 750}">
       Also, a platform that I have used in most of my projects is <span>Firebase</span>.
       In addition to that I have worked with both SQL and NoSQL databases.
     </p>
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1000}">
-      From my internship at Endometrix I have learned how a company operates from business decision making
-      and prioritization of tasks to designing a UI for a better user experience. Also, due to the small size
-      of the team I worked in all aspects of a <span>React Native</span> application. Some of the things I did
-      and learned are, working with state management libraries like <span>Redux/Redux-Toolkit</span>,
-      working with both <span>bare and managed workflows</span>, implementing recurring push notifications
-      and adding error reporting service with Sentry. Also, creating complex UI components that the user
-      can interact with was a big part of the internship.
+      From my internship at Endometrix I have learned how a company operates. From business decision making
+      and prioritization of tasks to designing a UI for a better user experience are just some of the valuable experience I gained.
+      Also, due to the small size of the team I worked in all aspects of a <span>React Native</span> application.
     </p>
+    <p class="desc" style="margin: 0" [appAnimate]="{name: 'fromLeftFade', delay: 1250}">During my internship among other things, I:</p>
+
+    <ul [appAnimate]="{name: 'fromLeftFade', delay: 1500}">
+      <li><p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1600}">Created complex, interactive and responsive UI component</p></li>
+      <li><p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1700}">Implemented recurring push notifications feature and the UI needed</p></li>
+      <li><p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1800}">Added error reporting service with Sentry</p></li>
+      <li><p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1900}">Created a complex graph view with statistic data from users</p></li>
+      <li><p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 2000}">Worked with both managed and bare workflows</p></li>
+      <li><p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 2100}">Used state management libraries like Redux-Toolkit</p></li>
+    </ul>
 
   </div>
 </div>
