--- a/src/app/Components/Primary/skills/skills.component.scss
+++ b/src/app/Components/Primary/skills/skills.component.scss
@@ -52,6 +52,7 @@
     .desc {
       margin-top: 0;
       margin-bottom: 15px;
+      width: 100%;
       color: var(--textWhite);
       font-family: var(--secondaryFont);
 
@@ -59,6 +60,35 @@
         color: var(--accentText)
       }
     }
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding-left: 30px;
+
+      li {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        margin: 5px 0;
+
+        &::before {
+          content: "";
+          width: 8px;
+          height: 8px;
+          background-color: var(--accent);
+          clip-path: polygon(0 0, 0% 100%, 100% 50%);
+          margin-left: -20px;
+          margin-right: 10px;
+        }
+
+        p {
+          margin: 0;
+        }
+      }
+    }
+
 
 
   }
