--- a/src/app/Components/Primary/my-work/my-work.component.html
+++ b/src/app/Components/Primary/my-work/my-work.component.html
@@ -45,7 +45,7 @@
       [name]="'Endometrix'" [logo]="'url(\'/../../../assets/EndometrixLogo.png\')'"
       [description]="'Mobile app that through daily tracking, helps you recognize patterns within your health so you can demand the treatment you deserve'"
       [color]="'#87E2E9'" [reactNative]="true" [redux]="true" [firebase]="true"
-      [liveLink]="'https://endo-metrix.com/'" [role]="'App Developer(Intern)'" [period]="'Jul 2020 - now'"
+      [liveLink]="'https://endo-metrix.com/'" [role]="'App Developer(Intern)'" [period]="'Jul 2020 - Oct 2020'"
       [appAnimate]="{name: 'fromTopFade', delay: 2250}">
     </app-work>
   </div>
