Fixed a typo on Skills page

--- a/src/app/Components/Primary/skills/skills.component.html
+++ b/src/app/Components/Primary/skills/skills.component.html
@@ -9,7 +9,7 @@
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 500}">
       <span>Passionate</span> with programming from the age of 12 I have
       <span>self-taught</span> languages like TypeScript, Javascript, SASS, CSS3, HTML5, Java, Python, C, C++
-      and Libraries/Frameworks like <span>Angular</span>, <span>React</span> <span>React Native</span> and JavaFX.
+      and Libraries/Frameworks like <span>React</span>, <span>Angular</span>, <span>React Native</span> and JavaFX.
     </p>
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 750}">
       Also, a platform that I have used in most of my projects is <span>Firebase</span>.
