Removed live view link for ChatIt

--- a/src/app/Components/Primary/my-work/my-work.component.html
+++ b/src/app/Components/Primary/my-work/my-work.component.html
@@ -12,7 +12,7 @@
       [description]="'The frontend code part of a MEAN full-stack website with global group room for chatting'"
       [color]="'#2A2B2A'" [typescript]="true" [react]="true" [redux]="true"
       [sass]="true" [codeLink]="'https://github.com/GakPower/ChatItReact'"
-      [liveLink]="'https://chatit.site'" [new]="true"
+      [new]="true"
       [appAnimate]="{name: 'fromTopFade', delay: 750}">
     </app-project>
     <app-project
