Removed outline border from field

--- a/src/app/Components/Secondary/field/field.component.scss
+++ b/src/app/Components/Secondary/field/field.component.scss
@@ -30,6 +30,8 @@ input, textarea {
   min-height: 100%;
 
   box-shadow: none;
+  user-select: none;
+  outline: 0;
 
   &:focus:valid + div,
   &.hasBeenFocused:valid + div{
