Updated the link to BHive and the packages

--- a/src/app/Components/Primary/my-work/my-work.component.html
+++ b/src/app/Components/Primary/my-work/my-work.component.html
@@ -28,7 +28,7 @@
       [description]="'Website to monitor and control your BHive Arduino scales'"
       [color]="'#FFAC1D'" [angular]="true" [firebase]="true" [typescript]="true"
       [codeLink]="'https://github.com/GakPower/BHiveAngular'"
-      [liveLink]="'https://www.bhive.team'"
+      [liveLink]="'https://bhive-project.web.app'"
       [appAnimate]="{name: 'fromTopFade', delay: 1250}">
     </app-project>
     <app-project
