Minor content update to about page

--- a/src/app/Components/Primary/about/about.component.html
+++ b/src/app/Components/Primary/about/about.component.html
@@ -13,7 +13,7 @@
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1500}">I would characterize myself as a <span>self-taught web developer</span>, <span>programming enthusiast</span>, <span>problem solver</span> and <span>perfectionist</span>.</p>
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 1750}">Amongst my interests are listening to music, playing tennis and chess.</p>
     <p class="desc" [appAnimate]="{name: 'fromLeftFade', delay: 2000}">
-      Currently looking for a full-time position where I can expand my skills.
+      Currently looking for an interesting position where my skills will be useful.
     </p>
 
   </div>
